--- a/ConsoleRPG/ConsoleRPG.csproj
+++ b/ConsoleRPG/ConsoleRPG.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Library\World\Arlith\Agents\" />
+    <Folder Include="Core\Library\World\Arlith\Items\" />
+  </ItemGroup>
+
 </Project>
